--- a/src/Tool/appsettings.json
+++ b/src/Tool/appsettings.json
@@ -6,26 +6,26 @@
     },
     "AllowedHosts": "*",
   "DefaultPackageVersions": [
-    "Microsoft.Quantum.Compiler::0.12.20082515-beta",
+    "Microsoft.Quantum.Compiler::20201007.1.0-beta",
 
-    "Microsoft.Quantum.CsharpGeneration::0.12.20082515-beta",
-    "Microsoft.Quantum.Development.Kit::0.12.20082515-beta",
-    "Microsoft.Quantum.Simulators::0.12.20082515-beta",
-    "Microsoft.Quantum.Xunit::0.12.20082515-beta",
+    "Microsoft.Quantum.CsharpGeneration::20201007.1.0-beta",
+    "Microsoft.Quantum.Development.Kit::20201007.1.0-beta",
+    "Microsoft.Quantum.Simulators::20201007.1.0-beta",
+    "Microsoft.Quantum.Xunit::20201007.1.0-beta",
 
-    "Microsoft.Quantum.Standard::0.12.20082515-beta",
-    "Microsoft.Quantum.Standard.Visualization::0.12.20082515-beta",
-    "Microsoft.Quantum.Chemistry::0.12.20082515-beta",
-    "Microsoft.Quantum.Chemistry.Jupyter::0.12.20082515-beta",
-    "Microsoft.Quantum.MachineLearning::0.12.20082515-beta",
-    "Microsoft.Quantum.Numerics::0.12.20082515-beta",
+    "Microsoft.Quantum.Standard::20201007.1.0-beta",
+    "Microsoft.Quantum.Standard.Visualization::20201007.1.0-beta",
+    "Microsoft.Quantum.Chemistry::20201007.1.0-beta",
+    "Microsoft.Quantum.Chemistry.Jupyter::20201007.1.0-beta",
+    "Microsoft.Quantum.MachineLearning::20201007.1.0-beta",
+    "Microsoft.Quantum.Numerics::20201007.1.0-beta",
 
-    "Microsoft.Quantum.Katas::0.12.20082515-beta",
+    "Microsoft.Quantum.Katas::20201007.1.0-beta",
 
-    "Microsoft.Quantum.Research::0.12.20082515-beta",
+    "Microsoft.Quantum.Research::20201007.1.0-beta",
 
-    "Microsoft.Quantum.Providers.IonQ::0.12.20082515-beta",
-    "Microsoft.Quantum.Providers.Honeywell::0.12.20082515-beta",
-    "Microsoft.Quantum.Providers.QCI::0.12.20082515-beta"
+    "Microsoft.Quantum.Providers.IonQ::20201007.1.0-beta",
+    "Microsoft.Quantum.Providers.Honeywell::20201007.1.0-beta",
+    "Microsoft.Quantum.Providers.QCI::20201007.1.0-beta"
   ]
 }
