--- a/src/ExecutionPathTracer/ExecutionPathTracer.csproj
+++ b/src/ExecutionPathTracer/ExecutionPathTracer.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.12.200915062-beta" />
+    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.12.201016274-pull" />
   </ItemGroup>
 
 </Project>
