--- a/src/Tests/Workspace.ProjectReferences.ProjectB/ProjectB.csproj
+++ b/src/Tests/Workspace.ProjectReferences.ProjectB/ProjectB.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.Quantum.Sdk/0.12.200915062-beta">
+﻿<Project Sdk="Microsoft.Quantum.Sdk/0.12.201016274-pull">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
