--- a/src/Tests/Workspace.ProjectReferences.ProjectB/ProjectB.csproj
+++ b/src/Tests/Workspace.ProjectReferences.ProjectB/ProjectB.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.Quantum.Sdk/0.12.20101601-beta">
+﻿<Project Sdk="Microsoft.Quantum.Sdk/0.12.2010116648-sdl">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
