--- a/src/MockLibraries/Mock.Chemistry/Mock.Chemistry.csproj
+++ b/src/MockLibraries/Mock.Chemistry/Mock.Chemistry.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.Quantum.Sdk/0.12.20102104-beta">
+<Project Sdk="Microsoft.Quantum.Sdk/0.12.2010116766-sdl">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -6,6 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.12.20102104-beta" />
+    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.12.2010116766-sdl" />
   </ItemGroup>
 </Project>
