--- a/src/ExecutionPathTracer/ExecutionPathTracer.csproj
+++ b/src/ExecutionPathTracer/ExecutionPathTracer.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.12.201017032-pull" />
+    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.12.2010116791-sdl" />
   </ItemGroup>
 
 </Project>
