--- a/src/Tool/appsettings.json
+++ b/src/Tool/appsettings.json
@@ -6,26 +6,26 @@
     },
     "AllowedHosts": "*",
   "DefaultPackageVersions": [
-    "Microsoft.Quantum.Compiler::0.12.201017032-pull",
+    "Microsoft.Quantum.Compiler::0.13.2010117111-sdl",
 
-    "Microsoft.Quantum.CsharpGeneration::0.12.201017032-pull",
-    "Microsoft.Quantum.Development.Kit::0.12.201017032-pull",
-    "Microsoft.Quantum.Simulators::0.12.201017032-pull",
-    "Microsoft.Quantum.Xunit::0.12.201017032-pull",
+    "Microsoft.Quantum.CsharpGeneration::0.13.2010117111-sdl",
+    "Microsoft.Quantum.Development.Kit::0.13.2010117111-sdl",
+    "Microsoft.Quantum.Simulators::0.13.2010117111-sdl",
+    "Microsoft.Quantum.Xunit::0.13.2010117111-sdl",
 
-    "Microsoft.Quantum.Standard::0.12.201017032-pull",
-    "Microsoft.Quantum.Standard.Visualization::0.12.201017032-pull",
-    "Microsoft.Quantum.Chemistry::0.12.201017032-pull",
-    "Microsoft.Quantum.Chemistry.Jupyter::0.12.201017032-pull",
-    "Microsoft.Quantum.MachineLearning::0.12.201017032-pull",
-    "Microsoft.Quantum.Numerics::0.12.201017032-pull",
+    "Microsoft.Quantum.Standard::0.13.2010117111-sdl",
+    "Microsoft.Quantum.Standard.Visualization::0.13.2010117111-sdl",
+    "Microsoft.Quantum.Chemistry::0.13.2010117111-sdl",
+    "Microsoft.Quantum.Chemistry.Jupyter::0.13.2010117111-sdl",
+    "Microsoft.Quantum.MachineLearning::0.13.2010117111-sdl",
+    "Microsoft.Quantum.Numerics::0.13.2010117111-sdl",
 
-    "Microsoft.Quantum.Katas::0.12.201017032-pull",
+    "Microsoft.Quantum.Katas::0.13.2010117111-sdl",
 
-    "Microsoft.Quantum.Research::0.12.201017032-pull",
+    "Microsoft.Quantum.Research::0.13.2010117111-sdl",
 
-    "Microsoft.Quantum.Providers.IonQ::0.12.201017032-pull",
-    "Microsoft.Quantum.Providers.Honeywell::0.12.201017032-pull",
-    "Microsoft.Quantum.Providers.QCI::0.12.201017032-pull"
+    "Microsoft.Quantum.Providers.IonQ::0.13.2010117111-sdl",
+    "Microsoft.Quantum.Providers.Honeywell::0.13.2010117111-sdl",
+    "Microsoft.Quantum.Providers.QCI::0.13.2010117111-sdl"
   ]
 }
