--- a/src/Tests/Workspace.ProjectReferences.ProjectA/ProjectA.csproj
+++ b/src/Tests/Workspace.ProjectReferences.ProjectA/ProjectA.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.Quantum.Sdk/0.12.201017032-pull">
+﻿<Project Sdk="Microsoft.Quantum.Sdk/0.13.201017759-beta">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
