--- a/src/Tool/appsettings.json
+++ b/src/Tool/appsettings.json
@@ -6,26 +6,26 @@
     },
     "AllowedHosts": "*",
   "DefaultPackageVersions": [
-    "Microsoft.Quantum.Compiler::0.13.20102604",
+    "Microsoft.Quantum.Compiler::0.13.2011117896-semmle",
 
-    "Microsoft.Quantum.CsharpGeneration::0.13.20102604",
-    "Microsoft.Quantum.Development.Kit::0.13.20102604",
-    "Microsoft.Quantum.Simulators::0.13.20102604",
-    "Microsoft.Quantum.Xunit::0.13.20102604",
+    "Microsoft.Quantum.CsharpGeneration::0.13.2011117896-semmle",
+    "Microsoft.Quantum.Development.Kit::0.13.2011117896-semmle",
+    "Microsoft.Quantum.Simulators::0.13.2011117896-semmle",
+    "Microsoft.Quantum.Xunit::0.13.2011117896-semmle",
 
-    "Microsoft.Quantum.Standard::0.13.20102604",
-    "Microsoft.Quantum.Standard.Visualization::0.13.20102604",
-    "Microsoft.Quantum.Chemistry::0.13.20102604",
-    "Microsoft.Quantum.Chemistry.Jupyter::0.13.20102604",
-    "Microsoft.Quantum.MachineLearning::0.13.20102604",
-    "Microsoft.Quantum.Numerics::0.13.20102604",
+    "Microsoft.Quantum.Standard::0.13.2011117896-semmle",
+    "Microsoft.Quantum.Standard.Visualization::0.13.2011117896-semmle",
+    "Microsoft.Quantum.Chemistry::0.13.2011117896-semmle",
+    "Microsoft.Quantum.Chemistry.Jupyter::0.13.2011117896-semmle",
+    "Microsoft.Quantum.MachineLearning::0.13.2011117896-semmle",
+    "Microsoft.Quantum.Numerics::0.13.2011117896-semmle",
 
-    "Microsoft.Quantum.Katas::0.13.20102604",
+    "Microsoft.Quantum.Katas::0.13.2011117896-semmle",
 
-    "Microsoft.Quantum.Research::0.13.20102604",
+    "Microsoft.Quantum.Research::0.13.2011117896-semmle",
 
-    "Microsoft.Quantum.Providers.IonQ::0.13.20102604",
-    "Microsoft.Quantum.Providers.Honeywell::0.13.20102604",
-    "Microsoft.Quantum.Providers.QCI::0.13.20102604"
+    "Microsoft.Quantum.Providers.IonQ::0.13.2011117896-semmle",
+    "Microsoft.Quantum.Providers.Honeywell::0.13.2011117896-semmle",
+    "Microsoft.Quantum.Providers.QCI::0.13.2011117896-semmle"
   ]
 }
