--- a/src/MockLibraries/Mock.Standard/Mock.Standard.csproj
+++ b/src/MockLibraries/Mock.Standard/Mock.Standard.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.Quantum.Sdk/0.13.20102604">
+﻿<Project Sdk="Microsoft.Quantum.Sdk/0.13.2011117895-sdl">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -6,6 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.13.20102604" />
+    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.13.2011117895-sdl" />
   </ItemGroup>
 </Project>
