--- a/src/Tests/Workspace.ProjectReferences/Workspace.ProjectReferences.csproj
+++ b/src/Tests/Workspace.ProjectReferences/Workspace.ProjectReferences.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.Quantum.Sdk/0.13.20111201-beta">
+﻿<Project Sdk="Microsoft.Quantum.Sdk/0.13.201119025-pull">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Quantum.Xunit" Version="0.13.20111201-beta" />
+    <PackageReference Include="Microsoft.Quantum.Xunit" Version="0.13.201119025-pull" />
   </ItemGroup>
     
   <ItemGroup>
