--- a/src/Tests/Workspace.ProjectReferences.ProjectA/ProjectA.csproj
+++ b/src/Tests/Workspace.ProjectReferences.ProjectA/ProjectA.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.Quantum.Sdk/0.13.201118141-beta">
+﻿<Project Sdk="Microsoft.Quantum.Sdk/0.14.201219642-pull">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
