--- a/images/iqsharp-base/Dockerfile
+++ b/images/iqsharp-base/Dockerfile
@@ -120,7 +120,7 @@ ENV PATH=$PATH:${HOME}/dotnet:${HOME}/.dotnet/tools \
 # Install IQ# and the project templates, using the NuGet packages from the
 # build context.
 ARG IQSHARP_VERSION
-RUN dotnet new -i "Microsoft.Quantum.ProjectTemplates::0.14.2011120240" && \
+RUN dotnet new -i "Microsoft.Quantum.ProjectTemplates::0.14.201219685-pull" && \
     dotnet tool install \
            --global \
            Microsoft.Quantum.IQSharp \
