--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -38,9 +38,9 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Quantum.Compiler" Version="0.14.2011120240" />
-    <PackageReference Include="Microsoft.Quantum.CsharpGeneration" Version="0.14.2011120240" />
-    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.14.2011120240" />
+    <PackageReference Include="Microsoft.Quantum.Compiler" Version="0.14.210121227-alpha" />
+    <PackageReference Include="Microsoft.Quantum.CsharpGeneration" Version="0.14.210121227-alpha" />
+    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.14.210121227-alpha" />
     <PackageReference Include="NuGet.Resolver" Version="5.1.0" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
