--- a/src/ExecutionPathTracer/ExecutionPathTracer.csproj
+++ b/src/ExecutionPathTracer/ExecutionPathTracer.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.14.2011120240" />
+    <PackageReference Include="Microsoft.Quantum.Simulators" Version="0.14.2101125232-beta" />
   </ItemGroup>
 
 </Project>
