--- a/src/Tool/appsettings.json
+++ b/src/Tool/appsettings.json
@@ -6,26 +6,26 @@
     },
     "AllowedHosts": "*",
   "DefaultPackageVersions": [
-    "Microsoft.Quantum.Compiler::0.14.2011120240",
+    "Microsoft.Quantum.Compiler::0.15.210121963-pull",
 
-    "Microsoft.Quantum.CsharpGeneration::0.14.2011120240",
-    "Microsoft.Quantum.Development.Kit::0.14.2011120240",
-    "Microsoft.Quantum.Simulators::0.14.2011120240",
-    "Microsoft.Quantum.Xunit::0.14.2011120240",
+    "Microsoft.Quantum.CsharpGeneration::0.15.210121963-pull",
+    "Microsoft.Quantum.Development.Kit::0.15.210121963-pull",
+    "Microsoft.Quantum.Simulators::0.15.210121963-pull",
+    "Microsoft.Quantum.Xunit::0.15.210121963-pull",
 
-    "Microsoft.Quantum.Standard::0.14.2011120240",
-    "Microsoft.Quantum.Standard.Visualization::0.14.2011120240",
-    "Microsoft.Quantum.Chemistry::0.14.2011120240",
-    "Microsoft.Quantum.Chemistry.Jupyter::0.14.2011120240",
-    "Microsoft.Quantum.MachineLearning::0.14.2011120240",
-    "Microsoft.Quantum.Numerics::0.14.2011120240",
+    "Microsoft.Quantum.Standard::0.15.210121963-pull",
+    "Microsoft.Quantum.Standard.Visualization::0.15.210121963-pull",
+    "Microsoft.Quantum.Chemistry::0.15.210121963-pull",
+    "Microsoft.Quantum.Chemistry.Jupyter::0.15.210121963-pull",
+    "Microsoft.Quantum.MachineLearning::0.15.210121963-pull",
+    "Microsoft.Quantum.Numerics::0.15.210121963-pull",
 
-    "Microsoft.Quantum.Katas::0.14.2011120240",
+    "Microsoft.Quantum.Katas::0.15.210121963-pull",
 
-    "Microsoft.Quantum.Research::0.14.2011120240",
+    "Microsoft.Quantum.Research::0.15.210121963-pull",
 
-    "Microsoft.Quantum.Providers.IonQ::0.14.2011120240",
-    "Microsoft.Quantum.Providers.Honeywell::0.14.2011120240",
-    "Microsoft.Quantum.Providers.QCI::0.14.2011120240"
+    "Microsoft.Quantum.Providers.IonQ::0.15.210121963-pull",
+    "Microsoft.Quantum.Providers.Honeywell::0.15.210121963-pull",
+    "Microsoft.Quantum.Providers.QCI::0.15.210121963-pull"
   ]
 }
